welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:1: error: Missing closing brace `}' assumed here
def indexOfMaxValue(nums:Array[Int]):Int =
^