welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int =
{
	var m: Int=nums(0)
	var i: Int=0
	for (n <- 1 to nums.length-1)
	{
		if (nums(n)>m)
		{
			m=nums(n)
			n=i
		} else if (nums(n)==m)
		{ m=m
		i=i
	}
	return i
}
